project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_if_else/var_decl_in_condition.ul
int F() {
    if( void temp; ) { } else {}
}
